bug jobs reduce image

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.2",
         "ably/ably-php": "^1.1",
         "ably/laravel-broadcaster": "^1.0",
+        "intervention/image": "^3.10",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "^5.2",
