--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.29",
         "spatie/laravel-permission": "^6.9",
         "tymon/jwt-auth": "^2.1"
     },
